[package]
name = "aws-bedrock-pipeline-rust"
version = "1.0.0"
edition = "2021"
description = "AWS Bedrock 4-Agent Pipeline implementation in Rust"
authors = ["AI Agent Pipeline Team"]

[[bin]]
name = "game_pipeline"
path = "game_pipeline.rs"

[dependencies]
# AWS SDK for Rust
aws-config = "1.1.0"
aws-sdk-bedrockruntime = "1.12.0"
aws-smithy-types = "1.1.0"

# Async runtime
tokio = { version = "1.35.0", features = ["full"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"

# Timing and utilities
chrono = { version = "0.4", features = ["serde"] }